--- a/resources/sass/material-dashboard/_variables.scss
+++ b/resources/sass/material-dashboard/_variables.scss
@@ -3,7 +3,7 @@
 
 //  Brand Colors
 $brand-primary:                    #ffb03b !default;
-$brand-success:                    $green !default;
+$brand-success:                    #00695C ;
 $brand-danger:                     $red !default;
 $brand-warning:                    $orange !default;
 $brand-info:                       $cyan !default;
